[gd_scene load_steps=22 format=3 uid="uid://bkdsrfgs27dla"]

[ext_resource type="Texture2D" uid="uid://k7gcvxqkw3ep" path="res://Sprites/Enem_Prop-Sheet.png" id="1_0rkkc"]
[ext_resource type="Script" path="res://Scripts/EnemyTopHat.gd" id="1_k0sau"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifml3"]
size = Vector2(29, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ey0bi"]
size = Vector2(29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgfhe"]
atlas = ExtResource("1_0rkkc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgldm"]
atlas = ExtResource("1_0rkkc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1f8h"]
atlas = ExtResource("1_0rkkc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57tkx"]
atlas = ExtResource("1_0rkkc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5a8u"]
atlas = ExtResource("1_0rkkc")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wp33"]
atlas = ExtResource("1_0rkkc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l2n7"]
atlas = ExtResource("1_0rkkc")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85406"]
atlas = ExtResource("1_0rkkc")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t87m"]
atlas = ExtResource("1_0rkkc")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v6kx"]
atlas = ExtResource("1_0rkkc")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iledt"]
atlas = ExtResource("1_0rkkc")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt4sf"]
atlas = ExtResource("1_0rkkc")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhcyr"]
atlas = ExtResource("1_0rkkc")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8khy"]
atlas = ExtResource("1_0rkkc")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dpvt"]
atlas = ExtResource("1_0rkkc")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mntjo"]
atlas = ExtResource("1_0rkkc")
region = Rect2(480, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvq2p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgfhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgldm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1f8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57tkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5a8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wp33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l2n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85406")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t87m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v6kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iledt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt4sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhcyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8khy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dpvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mntjo")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="EnemyPropellerHat" type="CharacterBody2D"]
script = ExtResource("1_k0sau")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -8)
shape = SubResource("RectangleShape2D_ifml3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -8)
shape = SubResource("RectangleShape2D_ey0bi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hvq2p")
frame_progress = 0.890913
offset = Vector2(0, -8)

[node name="Stun" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="Slow" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="Stun" to="." method="_on_stun_timeout"]
[connection signal="timeout" from="Slow" to="." method="_on_slow_timeout"]
